--- a/po/cs.po
+++ b/po/cs.po
@@ -6,10 +6,10 @@
 # Petr Kovar <pknbe@volny.cz>, 2007, 2008, 2009, 2010.
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-good-0.10.16.2\n"
+"Project-Id-Version: gst-plugins-good-0.10.23.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-06-26 18:27+0100\n"
-"PO-Revision-Date: 2010-01-12 21:13+0100\n"
+"POT-Creation-Date: 2010-07-15 01:34+0100\n"
+"PO-Revision-Date: 2010-07-11 20:26+0200\n"
 "Last-Translator: Petr Kovar <pknbe@volny.cz>\n"
 "Language-Team: Czech <translation-team-cs@lists.sourceforge.net>\n"
 "Language: cs\n"
@@ -248,10 +248,10 @@ msgid "Line In"
 msgstr "Linkový vstup"
 
 msgid "Internal CD"
-msgstr "Vnitřní linka CD"
+msgstr "Vnitřní CD"
 
 msgid "Video In"
-msgstr "Obrazový vstup"
+msgstr "Vstup videa"
 
 msgid "AUX 1 In"
 msgstr "Vstup AUX 1"
@@ -296,7 +296,7 @@ msgid "Keyboard Beep"
 msgstr "Zvukové znamení klávesnice"
 
 msgid "Simulate Stereo"
-msgstr "Simulovat stereo"
+msgstr "Napodobit stereo"
 
 msgid "Stereo"
 msgstr "Stereo"
@@ -314,19 +314,19 @@ msgid "Microphone Source"
 msgstr "Zdroj mikrofonu"
 
 msgid "Jack"
-msgstr "Zdířka"
+msgstr "Jack"
 
 msgid "Center / LFE"
 msgstr "Středový / LFE"
 
 msgid "Stereo Mix"
-msgstr "Směšování stereo"
+msgstr "Směšovač stereo"
 
 msgid "Mono Mix"
-msgstr "Směšování mono"
+msgstr "Směšovač mono"
 
 msgid "Input Mix"
-msgstr "Směšování vstupu"
+msgstr "Směšovač vstupu"
 
 msgid "SPDIF In"
 msgstr "Vstup SPDIF"
@@ -356,7 +356,7 @@ msgid "Handset"
 msgstr "Telefonní sluchátko"
 
 msgid "Other"
-msgstr "Ostatní"
+msgstr "Jiné"
 
 msgid "None"
 msgstr "Žádné"
@@ -464,11 +464,10 @@ msgid "Yellow Front Panel Connector"
 msgstr "Žlutý konektor na předním panelu"
 
 msgid "Spread Output"
-msgstr "Rozšířit výstup"
+msgstr "Rozložený výstup"
 
-# As per MS, both terms "převádění" and "skládání" are usable.
 msgid "Downmix"
-msgstr "Převádění (downmix)"
+msgstr "Snížení počtu kanálů"
 
 msgid "Virtual Mixer Input"
 msgstr "Vstup virtuálního směšovače"
@@ -480,14 +479,14 @@ msgid "Virtual Mixer Channels"
 msgstr "Kanály virtuálního směšovače"
 
 #. TRANSLATORS: name + number of a volume mixer control
-#, fuzzy, c-format
+#, c-format
 msgid "%s %d Function"
-msgstr "Funkce %s"
+msgstr "%s %d (funkce)"
 
 #. TRANSLATORS: name of a volume mixer control
 #, c-format
 msgid "%s Function"
-msgstr "Funkce %s"
+msgstr "%s (funkce)"
 
 msgid ""
 "Could not open audio device for playback. This version of the Open Sound "
