--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,109 @@
-This is GStreamer Good Plug-ins 0.10.23, "Stylish Kids in Riot"
+This is GStreamer Good Plug-ins 0.10.24, "Taking Liberties"
+
+Changes since 0.10.23:
+
+      * Use Orc (Optimized Inner Loops Runtime Compiler) for SIMD and
+        other optimisations, and remove liboil dependency. The main goal
+        for this release was to make the transition from liboil to liborc.
+        Performance improvements should not be expected and will be the
+        focus of future versions. liborc is an optional dependency for
+        the time being, to make it possible to test and develop the very
+        latest GStreamer versions on systems that don't have orc yet.
+        However, without orc slow unoptimised backup code will be used
+        for many performance critical code paths. Distributors are urged
+        to package and ship the latest version of liborc and compile
+        GStreamer modules with --enable-orc. Please do not distribute
+        GStreamer packages that are not orc enabled. More information on
+        the orc integration can be found in the docs/design/ directory.
+      * alpha: add "prefer-passthrough" property to allow passthrough mode
+      * avidemux: improve audio vbr detection
+      * cmmlenc: Remove hack to let oggmux start a new page for every CMML buffer
+      * deinterlace: add mmx implementations of greedyh for UYVY; orcify some deinterlacing methods
+      * dv1394: fix the internal clock even more
+      * flvmux: add "streamable" property
+      * flvmux: write duration at the correct position
+      * gdkpixbuf: Add a gdkpixbuf3 plugin that uses gdkpixbuf3
+      * jpegdec: improved parsing, and better buffer handling that minimises memcpys
+      * jpegdec, jpegenc: add grayscale support
+      * matroskademux: QoS fixes and improvements; reverse playback improvements
+      * matroskademux: handle zero-sized numbers correctly
+      * matroskamux: add "streamable" property; set streamheaders on output caps
+      * matroskamux: try harder to make sure clusters start with a key frame
+      * matroskamux: mark output buffers properly as keyframe or delta unit
+      * matroskamux: do some write caching to avoid newsegment events before each output buffer
+      * matroskamux: fix some timestamp drift caused by rounding errors
+      * pngenc: Support 8 bit grayscale
+      * pulsesink: optimize communication with PulseAudio using pa_stream_begin_write
+      * pulsesink: Post provide-clock message on the bus if the clock appears/disappears
+      * rtph264depay: consider SPS, PPS and IDR as keyframe, all others as DELTA_UNIT
+      * rtph264pay: handle short startcodes in the h264 bytestream
+      * rtpjitterbuffer: stop buffering and emit EOS at the end of a stream
+      * rtpmparobustdepay: add mpa-robust depayloader
+      * rtpmp4gdepay: calculate the frame duration correctly
+      * rtptheorapay: keep announcing the delivery-method in the capabilities, restores
+        compatibility with older farsight versions again
+      * rtspsrc: respect aggregate control attributes; try all ranges from the sdp
+      * spectrum: support 24-bit width and arbitrary bit depth
+      * udp: make url parsing compatible with VLC syntax
+      * udpsrc: fix multicast support on windows
+      * v4l2sink: destroy buffer pool when changing state to NULL
+      * videobox: fix negotiation for I420/YV12
+      * videomixer: don't mix input with different pixel aspect ratios; negotiation fixes
+      * wavparse: proper closing segment construction when doing non-flushing seeks
+      * wavparse: use typefind functions to check if PCM data contains dts stream
+
+Bugs fixed since 0.10.23:
+
+      * 619045 : [spectrum] Add support for 24-bit width and all depth combinations
+      * 555967 : [oss4] clarify some translation strings
+      * 570761 : [goom] crash in plugin_info_init allocating 260kB struct on stack
+      * 583047 : [jpegdec] optimise buffer handling when parsing frames
+      * 589997 : [rtp] need mpa-robust depayloader for helix-style MP3-DRAFT-00
+      * 595978 : [udpsrc] failed to play a multicast stream
+      * 597695 : [udpsrc] support VLC-style udp://239.255.11.11:1234 uri with bind address
+      * 611117 : [matroskademux] can't handle unknown cluster sizes
+      * 613066 : [flvmux] re-enable renamed/fixed is-live property
+      * 615461 : dv1394src clock continues to be broken
+      * 617339 : pulsesink doesn't make use of pa_stream_begin_write
+      * 618530 : [videomixer] Doesn't handle pixel-aspect-ratio correctly
+      * 618871 : 1394: remove useless last_time
+      * 618982 : [wavparse] wrong closing segment when doing non-flushing seek
+      * 619198 : [matroskademux] GstEbmlRead cleanup
+      * 619273 : [matroskamux] reduce downstream spam
+      * 619293 : [avimux] clean up avi header creation code
+      * 619531 : [rtspsrc] embedded asx streams' rtsp server doesn't like gstreamer request
+      * 619717 : unit tests fail if older -good plugins are present in system plugin directory
+      * 619824 : Use glib for checksumming
+      * 619848 : [deinterlace] can't switch properties on running pipeline
+      * 620148 : [videomixer] Doesn't negotiate format with downstream
+      * 620154 : [rtph264depay] Seeking with RTP payloaders corrupts images sometimes
+      * 620162 : [gdkpixbufdec] Bump rank to SECONDARY
+      * 620277 : [pulsesink] custom clock is still used after NULL state change
+      * 620358 : [matroskademux] Sorenson Squish WebM output seeking issues
+      * 620390 : rtph264pay doesn't understand short startcodes
+      * 620494 : [rtsp] stuttery audio with some h264/aac streams
+      * 620540 : [pulsesink] pa_stream_write() failed: Invalid argument
+      * 620591 : rtpceltpay doesn't handle stereo celt audio
+      * 620743 : matroskademux: refactor delta unit handling
+      * 620929 : Required libraw1394 version is not high enough
+      * 621510 : GNOME Goal: Remove deprecated glib symbols
+      * 621566 : [pulsesink] since upgrading plugins sound is garbled via Amarok
+      * 621723 : v4l2src crashes on PLAYING- > READY- > PLAYING
+      * 622498 : [avidemux] Doesn't reset all state when going back to READY
+      * 622500 : [v4l2sink] destroy open buffers when changing to NULL
+      * 622501 : [videobox] may negotiate input/output format combinations it can't actually handle
+      * 622816 : Make demos -DSEAL safe
+      * 623103 : matroskamux dispose error
+      * 623172 : [jpegdec] leak in unit test
+      * 623196 : rtpptdemux: don't send custom downstream event twice
+      * 623366 : [qtdemux] strip out bogus tags from XMP
+      * 623379 : [flvmux] Writing duration outside the allocated memory area in streaming mode
+      * 623585 : jpegdec: fails to skip extra 0xff markers at start
+      * 623654 : qtdemux: Fix order of bitrates in 'btrt' atom
+      * 619817 : [matroskademux] Reverse playback doesn't work
+      * 617512 : [alpha] should work in passthrough in all formats if alpha == 1.0
+      * 619485 : matroskademux: skip buffers before a late keyframe (QoS)
+      * 413942 : [wavparse] undetected dts-in-wav
 
 Changes since 0.10.22:
 
