--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,20 @@
-This is GStreamer FFmpeg Plug-ins 0.10.10, "It's the bomb"
+This is GStreamer FFmpeg Plug-ins  0.10.11, "Feeding trolls is strictly forbidden"
+
+Changes since 0.10.10:
+
+      * Synced to FFmpeg 0.6 branch
+      * Add mappings for all new codecs
+      * encoders: proxy downstream width/height/framerate
+      * encoders: Fix timestamps
+
+Bugs fixed since 0.10.10:
+
+      * 566250 : [ffdec_aac] Crash in gst_ffmpegdec_audio_frame
+      * 613231 : [ffdec] Aspect ratio change is not detected
+      * 622736 : [ffdeinterlace] [PATCH] Set the 'interlaced' field to FALSE in the source pad's caps
+      * 622773 : Encourage people to not use ffmpeg muxers
+      * 623388 : [audio encoders] Wrong output timestamps when receiving big input buffers
+      * 623671 : Various klass/description/rank fixes
 
 Changes since 0.10.9:
 
