--- a/po/az.po
+++ b/po/az.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer-0.8.0\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-06-26 14:09+0100\n"
+"POT-Creation-Date: 2010-07-26 17:44+0200\n"
 "PO-Revision-Date: 2004-03-19 18:40+0200\n"
 "Last-Translator: Metin Amiroff <metin@karegen.com>\n"
 "Language-Team: Azerbaijani <translation-team-az@lists.sourceforge.net>\n"
@@ -282,6 +282,13 @@ msgid "date"
 msgstr "tarix"
 
 msgid "date the data was created (as a GDate structure)"
+msgstr ""
+
+#, fuzzy
+msgid "datetime"
+msgstr "tarix"
+
+msgid "date and time the data was created (as a GstDateTime structure)"
 msgstr ""
 
 msgid "genre"
