--- a/po/be.po
+++ b/po/be.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.9.7\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-06-26 14:09+0100\n"
+"POT-Creation-Date: 2010-07-26 17:44+0200\n"
 "PO-Revision-Date: 2006-01-18 22:26+0200\n"
 "Last-Translator: Ales Nyakhaychyk <nab@mail.by>\n"
 "Language-Team: Belarusian <i18n@mova.org>\n"
@@ -289,6 +289,14 @@ msgid "date"
 msgstr "дата"
 
 msgid "date the data was created (as a GDate structure)"
+msgstr "дата, калі гэтыя даньні былі створана (як структура GDate)"
+
+#, fuzzy
+msgid "datetime"
+msgstr "дата"
+
+#, fuzzy
+msgid "date and time the data was created (as a GstDateTime structure)"
 msgstr "дата, калі гэтыя даньні былі створана (як структура GDate)"
 
 msgid "genre"
