--- a/po/bg.po
+++ b/po/bg.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.26.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-06-26 14:09+0100\n"
+"POT-Creation-Date: 2010-07-26 17:44+0200\n"
 "PO-Revision-Date: 2010-02-23 10:27+0200\n"
 "Last-Translator: Alexander Shopov <ash@kambanaria.org>\n"
 "Language-Team: Bulgarian <dict@fsa-bg.org>\n"
@@ -301,6 +301,14 @@ msgid "date"
 msgstr "дата"
 
 msgid "date the data was created (as a GDate structure)"
+msgstr "дата на създаване на данните (като структура GDate)"
+
+#, fuzzy
+msgid "datetime"
+msgstr "дата"
+
+#, fuzzy
+msgid "date and time the data was created (as a GstDateTime structure)"
 msgstr "дата на създаване на данните (като структура GDate)"
 
 msgid "genre"
