--- a/po/fi.po
+++ b/po/fi.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.29.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-07-06 20:30+0100\n"
+"POT-Creation-Date: 2010-07-26 17:44+0200\n"
 "PO-Revision-Date: 2010-06-30 11:47+0300\n"
 "Last-Translator: Tommi Vainikainen <Tommi.Vainikainen@iki.fi>\n"
 "Language-Team: Finnish <translation-team-fi@lists.sourceforge.net>\n"
@@ -301,6 +301,14 @@ msgid "date"
 msgstr "päiväys"
 
 msgid "date the data was created (as a GDate structure)"
+msgstr "päiväys, jolloin data luotiin (GDate-muodossa)"
+
+#, fuzzy
+msgid "datetime"
+msgstr "päiväys"
+
+#, fuzzy
+msgid "date and time the data was created (as a GstDateTime structure)"
 msgstr "päiväys, jolloin data luotiin (GDate-muodossa)"
 
 msgid "genre"
