--- a/po/fr.po
+++ b/po/fr.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.28.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-07-06 20:30+0100\n"
+"POT-Creation-Date: 2010-07-26 17:44+0200\n"
 "PO-Revision-Date: 2010-04-30 22:36+0200\n"
 "Last-Translator: Claude Paroz <claude@2xlibre.net>\n"
 "Language-Team: French <traduc@traduc.org>\n"
@@ -302,6 +302,14 @@ msgid "date"
 msgstr "date"
 
 msgid "date the data was created (as a GDate structure)"
+msgstr "date de création des données (sous forme de structure GDate)"
+
+#, fuzzy
+msgid "datetime"
+msgstr "date"
+
+#, fuzzy
+msgid "date and time the data was created (as a GstDateTime structure)"
 msgstr "date de création des données (sous forme de structure GDate)"
 
 msgid "genre"
