--- a/po/hu.po
+++ b/po/hu.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.25.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-06-26 14:09+0100\n"
+"POT-Creation-Date: 2010-07-26 17:44+0200\n"
 "PO-Revision-Date: 2010-02-01 15:04+0100\n"
 "Last-Translator: Gabor Kelemen <kelemeng@gnome.hu>\n"
 "Language-Team: Hungarian <translation-team-hu@lists.sourceforge.net>\n"
@@ -296,6 +296,14 @@ msgid "date"
 msgstr "dátum"
 
 msgid "date the data was created (as a GDate structure)"
+msgstr "az adatok létrehozási dátuma (GDate struktúraként)"
+
+#, fuzzy
+msgid "datetime"
+msgstr "dátum"
+
+#, fuzzy
+msgid "date and time the data was created (as a GstDateTime structure)"
 msgstr "az adatok létrehozási dátuma (GDate struktúraként)"
 
 msgid "genre"
