--- a/po/id.po
+++ b/po/id.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.29.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-07-14 17:46+0100\n"
+"POT-Creation-Date: 2010-07-26 17:44+0200\n"
 "PO-Revision-Date: 2010-06-29 21:55+0700\n"
 "Last-Translator: Andhika Padmawan <andhika.padmawan@gmail.com>\n"
 "Language-Team: Indonesian <translation-team-id@lists.sourceforge.net>\n"
@@ -298,6 +298,14 @@ msgid "date"
 msgstr "tanggal"
 
 msgid "date the data was created (as a GDate structure)"
+msgstr "tanggal data dibuat (menurut struktur GDate)"
+
+#, fuzzy
+msgid "datetime"
+msgstr "tanggal"
+
+#, fuzzy
+msgid "date and time the data was created (as a GstDateTime structure)"
 msgstr "tanggal data dibuat (menurut struktur GDate)"
 
 msgid "genre"
