--- a/po/nb.po
+++ b/po/nb.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.14\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-06-26 14:09+0100\n"
+"POT-Creation-Date: 2010-07-26 17:44+0200\n"
 "PO-Revision-Date: 2007-11-02 15:43+0100\n"
 "Last-Translator: Kjartan Maraas <kmaraas@gnome.org>\n"
 "Language-Team: Norwegian Bokmaal <i18n-nb@lister.ping.uio.no>\n"
@@ -287,6 +287,15 @@ msgstr "dato"
 
 #, fuzzy
 msgid "date the data was created (as a GDate structure)"
+msgstr ""
+"dato for oppretting av dataene (kalenderdager i den Julianske kalenderen)"
+
+#, fuzzy
+msgid "datetime"
+msgstr "dato"
+
+#, fuzzy
+msgid "date and time the data was created (as a GstDateTime structure)"
 msgstr ""
 "dato for oppretting av dataene (kalenderdager i den Julianske kalenderen)"
 
