--- a/po/rw.po
+++ b/po/rw.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.8.8\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-06-26 14:09+0100\n"
+"POT-Creation-Date: 2010-07-26 17:44+0200\n"
 "PO-Revision-Date: 2005-04-04 10:55-0700\n"
 "Last-Translator: Steven Michael Murphy <murf@e-tools.com>\n"
 "Language-Team: Kinyarwanda <translation-team-rw@lists.sourceforge.net>\n"
@@ -379,6 +379,14 @@ msgstr "Itariki"
 
 #, fuzzy
 msgid "date the data was created (as a GDate structure)"
+msgstr "Itariki i Ibyatanzwe Byaremwe in Kalindari Iminsi"
+
+#, fuzzy
+msgid "datetime"
+msgstr "Itariki"
+
+#, fuzzy
+msgid "date and time the data was created (as a GstDateTime structure)"
 msgstr "Itariki i Ibyatanzwe Byaremwe in Kalindari Iminsi"
 
 msgid "genre"
