--- a/po/sr.po
+++ b/po/sr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.8.8\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-06-26 14:09+0100\n"
+"POT-Creation-Date: 2010-07-26 17:44+0200\n"
 "PO-Revision-Date: 2005-01-27 16:58+0100\n"
 "Last-Translator: Danilo Segan <dsegan@gmx.net>\n"
 "Language-Team: Serbian <gnu@prevod.org>\n"
@@ -318,6 +318,14 @@ msgstr "датум"
 
 #, fuzzy
 msgid "date the data was created (as a GDate structure)"
+msgstr "датум прављења података (као број Јулијанског дана)"
+
+#, fuzzy
+msgid "datetime"
+msgstr "датум"
+
+#, fuzzy
+msgid "date and time the data was created (as a GstDateTime structure)"
 msgstr "датум прављења података (као број Јулијанског дана)"
 
 msgid "genre"
